# fleet-chat

./: .env.example  .gitignore  .ncurc.json  CLAUDE.md  COMPLETION_SUMMARY.md  DRAG_DROP_INSTALLATION.md  IMPLEMENTATION_A2UI_PLUGIN_GENERATION.md  IMPLEMENTATION_MENTION_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_LOG.md  LAUNCHER_CODE_EXAMPLES.md  LAUNCHER_IMPROVEMENTS.md  LAUNCHER_VISUAL_GUIDE.md  LICENSE-MIT  NEW_REQUIREMENT_IMPLEMENTATION.md  PLUGIN_AUDIT.md  PLUGIN_SYSTEM.md  PLUGIN_SYSTEM_ENHANCED.md  QUICK_START_A2UI_GENERATOR.md  QUICK_START_GUIDE.md  README.md  WORKSPACE.md  advanced-demo.fcp  async-data.fcp  biome.json  converted-todo.ts  debug-drag-drop.js  form-input.fcp  hello-world.fcp  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  search-list.fcp  simple-demo.fcp  test-api-import.js  test-drag-drop.html  test-enhanced-api-summary.md  test-enhanced-raycast-api.js  test-merged-api.js  (+12 more)
docs/: A2UI_ANALYSIS.md  A2UI_GENERATION_RULES.md  A2UI_PLUGIN_EXAMPLES.md  A2UI_PLUGIN_GENERATION.md  A2UI_PLUGIN_IMPLEMENTATION_SUMMARY.md  AI_CHAT_SUGGESTIONS_DEMO.md  AI_PROVIDER_GUIDE.md  AI_SEARCH_INTEGRATION.md  AI_SEARCH_INTEGRATION_TESTS.md  AI_SEARCH_INTEGRATION_VISUAL.md  ENHANCED_PLUGIN_PACKAGING.md  FINAL_IMPLEMENTATION_SUMMARY.md  MENTION_EXAMPLES.md  MENTION_QUICK_START.md  MENTION_SCREENSHOTS.md  MENTION_SUPPORT.md  MENTION_UI_GUIDE.md  MERGE_COMPLETION_SUMMARY.md  PLUGIN_PACKAGING.md  PLUGIN_SYSTEM_GUIDE.md  QUICK_START.md  SIMPLIFIED_PLUGIN_PACKAGING.md  SIMPLIFIED_PLUGIN_SUMMARY.md
examples/: advanced-demo.fcp
examples/a2ui-plugin-generation/: README.md
examples/advanced-demo/: package.json
examples/advanced-demo/src/: index.ts
examples/simple-demo/: package.json  simple-demo.fcp
examples/simple-demo/src/: index.ts
examples/test-plugin/: package.json
examples/test-plugin/src/: index.ts
market/: index.json
public/workers/: enhanced-plugin-worker.js  enhanced-plugin-worker.ts  plugin-worker.js
public/workers/src/workers/: enhanced-plugin-worker.js
src/: main.ts  routes.ts  tauri_axum.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: a2ui_agent.rs  a2ui_schema.json  axum_app.rs  gemini_agent.rs  lib.rs  main.rs  plugins.rs  rig_agent.rs  search.rs  tauri_axum.rs  window.rs
src-tauri/src/a2ui/: agent.rs  mod.rs  plugin_generator.rs  provider.rs  schema.json  schema.rs
src-tauri/src/routes/: a2ui.rs  ai.rs  mod.rs
src-tauri/src/templates/: action_confirmation.json  contact_card.json  contact_list.json  no_results.json  search_results.json
src/components/: drop-zone.ts  global-drop-handler.ts  plugin-manager-ui.ts  suggestion-dropdown.ts
src/components/a2ui/: a2ui-chat.ts  a2ui-renderer.ts  client.ts  index.ts
src/components/a2ui-chat/: a2ui-chat.ts  a2ui-renderer.ts  client.ts  index.ts
src/components/a2ui-chat/theme/: index.ts  theme.ts
src/components/a2ui-chat/ui/: index.ts  snackbar.ts
src/components/a2ui/theme/: index.ts  theme.ts
src/components/a2ui/ui/: index.ts  snackbar.ts
src/components/button/: button.component.ts  button.styles.ts  index.ts
src/components/lucide-icon/: icon.component.ts  icon.styles.ts  icon.types.ts  index.ts
src/components/rig/: rig-chat.ts  rig-client.ts
src/layouts/: activity-bar.ts  launcher-layout.ts  root-layout.ts  statusbar.ts  title-bar.ts  traffic-lights.ts
src/layouts/menu/: index.ts  menu-bar.ts  menu-data.ts  menu-item.ts  menu-portal.ts  menu-submenu.ts  menu-types.ts
src/layouts/panels/: bottom-panel.ts  index.ts  left-panel.ts  panel-chat.ts  panel-explorer.ts  panel-git.ts  panel-search.ts  panel-settings.ts  panel-terminal.ts  right-panel.ts
src/plugins/: a2ui-plugin-bridge.ts  plugin-integration.ts  plugin-loader.ts  plugin-manager.ts  plugin-system.ts  tsconfig.json
src/plugins/examples/: simple-demo.fcp  test-new-system.html
src/plugins/examples/advanced-demo/src/: index.ts
src/plugins/examples/async-data/: package.json
src/plugins/examples/form-input/: package.json
src/plugins/examples/hello-world/: package.json  tsconfig.json
src/plugins/examples/search-list/: package.json
src/plugins/examples/simple-demo/: package.json
src/plugins/examples/test-plugin/: README.md  package.json  test-plugin.fcp
src/plugins/performance/: plugin-cache.ts
src/plugins/renderer/: event-system.ts  react-compat.ts  react-to-lit-compiler.ts  serialization.ts
src/plugins/storage/: cache.ts  local-storage.ts
src/plugins/system/: clipboard.ts  filesystem.ts
src/plugins/ui/components/: fc-action-panel.ts  fc-action.ts  fc-detail.ts  fc-dropdown.ts  fc-form.ts  fc-grid.ts  fc-list.ts  fc-menu-bar-extra.ts  fc-menu-bar.ts
src/services/: a2ui-plugin-generator.ts
src/stores/: ui.store.ts
src/styles/: app.css  global.css.ts  menu-bar.css.ts  normalize.css  resizable.css.ts  theme.css  title-bar.css.ts
src/utils/: mention-parser.ts  resizable.ts
src/views/errors/: not-found.ts  not-in-browser.ts
src/views/home/: home.component.ts
src/views/plugin-generator/: plugin-generator.component.ts
src/views/search/: search.component.ts
src/workers/: enhanced-plugin-worker.ts  enhanced-plugin-worker.ts.backup  plugin-worker.ts
template-test/: README.md  package.json  template-test.fcp
template-test/src/: index.ts
templates/plugin-template/: README.md  package.json
templates/plugin-template/src/: index.ts
test-plugin/: package.json
test-plugin/src/: index.ts
test/plugin-tests/: plugin-test-runner.ts  simple-test-runner.js
thoughts/handoffs/: plugin-worker-implementation.md
tools/: create-from-template.ts  enhanced-plugin-packer.js  enhanced-plugin-packer.ts  native-packager.cjs  package-plugin.py  package.json  plugin-cli.js  plugin-market.ts  plugin-packer.js  plugin-packer.ts  react-to-lit-converter.js  react-to-lit-converter.ts  simple-cli.ts  simple-packager.cjs  simple-packer.ts  test-conversion.cjs  test-packaging.js  tsconfig.json
(+7 files in other folders)
