[package]
name = "fleet-lit"
version = "0.0.1"
description = "Experimental Fleet / Trae UI built with Tauri and Lit web components."
authors = ["sternelee <sternelee@gmail.com>"]
repository = "https://github.com/sternelee/fleet-chat"
license = "MIT or Apache-2.0"
rust-version = "1.80"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fleet_lit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
dotenv-build = "0.1"
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "devtools",
  "protocol-asset",
  "image-ico",
  "image-png",
] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

# Essential crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Application search and file search
applications = "0.3.1"
ignore = "0.4"
walkdir = "2.5"
base64 = "0.22"

axum = "0.8"
thiserror = "2.0"
tower-service = "0.3"
futures = "0.3"
tokio = { version = "1.48", features = [
  "sync",
  "rt",
  "macros",
  "rt-multi-thread",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# AI/LLM dependencies
reqwest = { version = "0.12", features = ["json"] }
jsonschema = { version = "0.18" }
async-trait = "0.1"

# Used to call the macOS native API
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
icns = "0.3"
image = "0.25"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1.47", features = ["full"] }
serde_json = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
tower-service = "0.3.3"

# Optimized for bundle size. If you want faster builds comment out/delete this section.
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html
# Reference: https://tauri.app/concept/size/
[profile.release]
codegen-units = 128 # Allows LLVM to perform better optimization, reduce number of codegen units to increase optimizations.
lto = true          # Enables link-time-optimizations. LTO can produce better optimized code, at the cost of longer linking time.
opt-level = 1       # Use slightly better optimizations. Use "s" if you prefer smaller binaries.
panic = "abort"     # Higher performance by disabling panic handlers.
debug = false       # Disable debug on production build.
strip = true        # Ensures debug symbols are removed.

[profile.dev]
incremental = true # Compile your binary in smaller steps.
debug = "limited"  # Debug info without type or variable-level information.
